# bci_stim_engine

./: .gitignore  CMakeLists.txt  readme.md
.cache/clangd/index/: ALCheck.cpp.085803075693A848.idx  ALCheck.cpp.A2801EDDA6964582.idx  ALCheck.hpp.93467F27B5360855.idx  ALCheck.hpp.B58347956BFD2E17.idx  AlResource.cpp.4D7BE2B5CA7ECC67.idx  AlResource.cpp.6A48634E59C8D4FD.idx  AlResource.hpp.4432B4B50A47FCCB.idx  AlResource.hpp.6DDAED2EF5C0DDB2.idx  Angle.hpp.27224DE98BDEB641.idx  Angle.hpp.EDA38F56CB3981DB.idx  Angle.inl.319045457E09740F.idx  Angle.inl.44A2FFE077968469.idx  AudioDevice.cpp.30AC3EA2FC40498D.idx  AudioDevice.cpp.C6F9C3CA79DC8CF2.idx  AudioDevice.hpp.8C6145E5F8BD901E.idx  AudioDevice.hpp.F579EB8B5D0FB7F7.idx  BlendMode.cpp.21D7699AFECA0139.idx  BlendMode.cpp.B542B6A0D8D83448.idx  BlendMode.cpp.BE6656ACB0ABE0E8.idx  BlendMode.cpp.F3E3194F035DEA8D.idx  BlendMode.hpp.7F023B8F23656699.idx  BlendMode.hpp.837B5F69D0B2B4B3.idx  BlendMode.hpp.A2D9AA5DEC469736.idx  BlendMode.hpp.B63DA7A3DED6107E.idx  BrokerMetadata.h.93AD702D723D2DA6.idx  CircleShape.cpp.0D03581B0B935086.idx  CircleShape.cpp.406407B2E5809A4A.idx  CircleShape.cpp.4934C7DCDB6CD683.idx  CircleShape.cpp.52A3525B0F22BDB2.idx  CircleShape.hpp.4559281FFB5184C1.idx  CircleShape.hpp.60D5E2929E245432.idx  CircleShape.hpp.96298E1B3FB5E7D3.idx  CircleShape.hpp.EA963C9BEC2E5A88.idx  Clipboard.cpp.1136E71C855E062F.idx  Clipboard.cpp.399003C6220D9988.idx  Clipboard.cpp.9F5586D559FA0F30.idx  Clipboard.cpp.E29E81C0614A2075.idx  Clipboard.hpp.758B68492F0B642E.idx  Clipboard.hpp.91613F44273CAF88.idx  Clipboard.hpp.A218D1A1AA16F48F.idx  (+1085 more)
config/: cfg.toml
src/: main.cc
src/components/: body.hpp  colorable.hpp  id.hpp  text.hpp
src/engine/: engine.cc  engine.hpp  entity_manager.cc  entity_manager.hpp
src/events/: spawnssvep.hpp
src/graphics/: game_graphics.cc  game_graphics.hpp  graphics.cc  graphics.hpp
src/systems/: base_system.cc  base_system.hpp  logic_system.cc  logic_system.hpp  render_system.cc  render_system.hpp
src/util/: read_cfg.hpp
